[B]Retrospect v5.2.8 - Changelog - 2020-07-09[/B]

A small release for Retrospect that includes a number of new Dutch regional channels and fixes some minor issues with some of the existing channels.

[B]Framework related[/B]
* Added: Option for post-processing of retrieved items

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: Use GraphQL for tags/categories (Fixes #1340)
* Added: Separate TV4 Group channel for TV4play.se (Fixes# 965)