@@ -2,9 +2,12 @@
 # SPDX-License-Identifier: CC-BY-NC-SA-4.0
 
 from resources.lib import chn_class
+from resources.lib.helpers.datehelper import DateHelper
 
-from resources.lib.regexer import Regexer
+from resources.lib.mediaitem import MediaItem
 from resources.lib.parserdata import ParserData
+from resources.lib.regexer import Regexer
+from resources.lib.helpers.jsonhelper import JsonHelper
 from resources.lib.logger import Logger
 from resources.lib.urihandler import UriHandler
 
@@ -30,37 +33,26 @@ class Channel(chn_class.Channel):
         # setup the main parsing data
         if self.channelCode == 'nickelodeon':
             self.noImage = "nickelodeonimage.png"
-            self.mainListUri = "http://www.nickelodeon.nl/shows"
-            self.baseUrl = "http://www.nickelodeon.nl"
+            self.mainListUri = "https://www.nickelodeon.nl/shows"
+            self.baseUrl = "https://www.nickelodeon.nl"
 
         elif self.channelCode == "nickno":
             self.noImage = "nickelodeonimage.png"
-            self.mainListUri = "http://www.nickelodeon.no/program/"
-            self.baseUrl = "http://www.nickelodeon.no"
+            self.mainListUri = "https://www.nickelodeon.no/shows"
+            self.baseUrl = "https://www.nickelodeon.no"
 
         else:
             raise NotImplementedError("Unknown channel code")
 
-        episode_item_regex = r"""<a[^>]+href="(?<url>/[^"]+)"[^>]*>\W*<img[^>]+src='(?<thumburl>[^']+)'[^>]*>\W*<div class='info'>\W+<h2 class='title'>(?<title>[^<]+)</h2>\W+<p class='sub_title'>(?<description>[^<]+)</p>"""
-        episode_item_regex = Regexer.from_expresso(episode_item_regex)
-        self._add_data_parser(self.mainListUri, match_type=ParserData.MatchExact,
-                              preprocessor=self.no_nick_jr,
-                              parser=episode_item_regex, creator=self.create_episode_item)
-        # <h2 class='row-title'>Nick Jr
+        self._add_data_parser(self.mainListUri, json=True, name="JSON extract mainlist",
+                              match_type=ParserData.MatchExact,
+                              preprocessor=self.extract_json_episodes,
+                              parser=['items'], creator=self.create_json_episode_item)
 
-        video_item_regex = r"""<li[^>]+data-item-id='\d+'>\W+<a href='(?<url>[^']+)'>\W+<img[^>]+src="(?<thumburl>[^"]+)"[^>]*>\W+<p class='title'>(?<title>[^<]+)</p>\W+<p[^>]+class='subtitle'[^>]*>(?<subtitle>[^>]+)</p>"""
-        video_item_regex = Regexer.from_expresso(video_item_regex)
-        self._add_data_parser("*",
-                              preprocessor=self.pre_process_folder_list,
-                              parser=video_item_regex, creator=self.create_video_item,
-                              updater=self.update_video_item)
-
-        self.pageNavigationRegex = r'href="(/video[^?"]+\?page_\d*=)(\d+)"'
-        self.pageNavigationRegexIndex = 1
-        self._add_data_parser("*", parser=self.pageNavigationRegex, creator=self.create_page_item)
-
-        self.mediaUrlRegex = '<param name="src" value="([^"]+)" />'    # used for the update_video_item
-        self.swfUrl = "http://origin-player.mtvnn.com/g2/g2player_2.1.7.swf"
+        self._add_data_parser("https://www.nickelodeon.n[ol]/shows/", name="JSON video creator",
+                              match_type=ParserData.MatchRegex,
+                              json=True, preprocessor=self.extract_json_video,
+                              parser=["items"], creator=self.create_json_video_item)
 
         #===============================================================================================================
         # Test cases:
@@ -71,7 +63,92 @@ class Channel(chn_class.Channel):
         # ====================================== Actual channel setup STOPS here =======================================
         return
 
-    def create_video_item(self, result_set):
+    def extract_json_video(self, data):
+        """ Performs pre-process actions for data processing.
+
+        Accepts an data from the process_folder_list method, BEFORE the items are
+        processed. Allows setting of parameters (like title etc) for the channel.
+        Inside this method the <data> could be changed and additional items can
+        be created.
+
+        The return values should always be instantiated in at least ("", []).
+
+        :param str data: The retrieve data that was loaded for the current item and URL.
+
+        :return: A tuple of the data and a list of MediaItems that were generated.
+        :rtype: tuple[str|JsonHelper,list[MediaItem]]
+
+        """
+
+        Logger.info("Performing Pre-Processing")
+        items = []
+
+        data = Regexer.do_regex(r'window.__DATA__ = ([\w\W]+?});\s*window.__PUSH_STATE__', data)[0]
+        json_data = JsonHelper(data)
+        main_container = [m for m in json_data.get_value("children") if m["type"] == "MainContainer"]
+        line_lists = [lst for lst in main_container[0]["children"] if lst["type"] == "LineList"]
+        for line_list in line_lists:
+            if line_list.get("props", {}).get("type") == "video-guide":
+                json_data.json = line_list["props"]
+                return json_data, items
+
+        Logger.warning("Cannot extract video items")
+        return json_data, items
+
+    def extract_json_episodes(self, data):
+        """ Performs pre-process actions for data processing.
+
+        Accepts an data from the process_folder_list method, BEFORE the items are
+        processed. Allows setting of parameters (like title etc) for the channel.
+        Inside this method the <data> could be changed and additional items can
+        be created.
+
+        The return values should always be instantiated in at least ("", []).
+
+        :param str data: The retrieve data that was loaded for the current item and URL.
+
+        :return: A tuple of the data and a list of MediaItems that were generated.
+        :rtype: tuple[str|JsonHelper,list[MediaItem]]
+
+        """
+
+        Logger.info("Performing Pre-Processing")
+        items = []
+
+        data = Regexer.do_regex(r'window.__DATA__ = ([\w\W]+?});\s*window.__PUSH_STATE__', data)[0]
+        json_data = JsonHelper(data)
+        main_container = [m for m in json_data.get_value("children") if m["type"] == "MainContainer"]
+        line_list = [item for item in main_container[0]["children"] if item["type"] == "LineList"]
+        line_list = line_list[0]["props"]
+        json_data.json = line_list
+        return json_data, items
+
+    def create_json_episode_item(self, result_set):
+        """ Creates a new MediaItem for an episode.
+
+        This method creates a new MediaItem from the Regular Expression or Json
+        results <result_set>. The method should be implemented by derived classes
+        and are specific to the channel.
+
+        :param dict result_set:   The result_set of the self.episodeItemRegex
+
+        :return: A new MediaItem of type 'folder'.
+        :rtype: MediaItem|None
+
+        """
+
+        Logger.trace(result_set)
+        meta = result_set["meta"]
+        name = meta["header"]["title"]
+        url = "{}{}".format(self.baseUrl, result_set["url"])
+
+        item = MediaItem(name, url)
+        item.description = meta.get("description")
+        item.isGeoLocked = True
+        item.thumb = result_set.get("media", {}).get("image", {}).get("url")
+        return item
+
+    def create_json_video_item(self, result_set):
         """ Creates a MediaItem of type 'video' using the result_set from the regex.
 
         This method creates a new MediaItem from the Regular Expression or Json
@@ -83,81 +160,34 @@ class Channel(chn_class.Channel):
         self.update_video_item method is called if the item is focussed or selected
         for playback.
 
-        :param list[str]|dict[str,str] result_set: The result_set of the self.episodeItemRegex
+        :param dict result_set: The result_set of the self.episodeItemRegex
 
         :return: A new MediaItem of type 'video' or 'audio' (despite the method's name).
         :rtype: MediaItem|None
 
         """
 
-        item = chn_class.Channel.create_video_item(self, result_set)
-        if item is None:
-            return item
+        Logger.trace(result_set)
+        meta = result_set["meta"]
+        name = meta["header"]["title"]["text"]
+        sub_heading = meta["subHeader"]
+        title = "{} - {}".format(name, sub_heading)
+        url = "{}{}".format(self.baseUrl, result_set["url"])
 
+        item = MediaItem(title, url)
+        item.type = "video"
+        item.description = meta.get("description")
+        item.thumb = result_set.get("media", {}).get("image", {}).get("url")
         item.isGeoLocked = True
+
+        date_value = meta["date"]
+        if "." in date_value:
+            date = DateHelper.get_date_from_string(date_value, date_format="%d.%m.%Y")
+        else:
+            date = DateHelper.get_date_from_string(date_value, date_format="%d/%m/%Y")
+        item.set_date(*date[0:6])
+
         return item
-
-    def no_nick_jr(self, data):
-        """ Performs pre-process actions for data processing.
-
-        Accepts an data from the process_folder_list method, BEFORE the items are
-        processed. Allows setting of parameters (like title etc) for the channel.
-        Inside this method the <data> could be changed and additional items can
-        be created.
-
-        The return values should always be instantiated in at least ("", []).
-
-        :param str data: The retrieve data that was loaded for the current item and URL.
-
-        :return: A tuple of the data and a list of MediaItems that were generated.
-        :rtype: tuple[str|JsonHelper,list[MediaItem]]
-
-        """
-
-        Logger.info("Performing Pre-Processing")
-        items = []
-
-        end = data.find("<h2 class='row-title'>Nick Jr")
-
-        Logger.debug("Pre-Processing finished")
-        if end > 0:
-            Logger.debug("Nick Jr content found starting at %d", end)
-            return data[:end], items
-        return data, items
-
-    def pre_process_folder_list(self, data):
-        """ Performs pre-process actions for data processing.
-
-        Accepts an data from the process_folder_list method, BEFORE the items are
-        processed. Allows setting of parameters (like title etc) for the channel.
-        Inside this method the <data> could be changed and additional items can
-        be created.
-
-        The return values should always be instantiated in at least ("", []).
-
-        :param str data: The retrieve data that was loaded for the current item and URL.
-
-        :return: A tuple of the data and a list of MediaItems that were generated.
-        :rtype: tuple[str|JsonHelper,list[MediaItem]]
-
-        """
-
-        Logger.info("Performing Pre-Processing")
-        items = []
-
-        end = data.find('<li class="divider playlist-item">')
-        if end < 0:
-            end = data.find("<p>Liknande videos</p>")
-        if end < 0:
-            end = data.find("<p>Lignende videoer</p>")
-        if end < 0:
-            end = data.find("<p>Andere leuke video’s</p>")
-
-        Logger.debug("Pre-Processing finished")
-        if end > 0:
-            return data[:end], items
-
-        return data, items
 
     def update_video_item(self, item):
         """Updates an existing MediaItem with more data.
@@ -183,24 +213,29 @@ class Channel(chn_class.Channel):
         """
 
         Logger.debug('Starting update_video_item for %s (%s)', item.name, self.channelName)
-
-        data = UriHandler.open(item.url, proxy=self.proxy)
-
-        # get the playlist GUID
-        playlist_guids = Regexer.do_regex("<div[^>]+data-playlist-id='([^']+)'[^>]+></div>", data)
-        if not playlist_guids:
-            # let's try the alternative then (for the new channels)
-            playlist_guids = Regexer.do_regex('local_playlist[", -]+([a-f0-9]{20})"', data)
-        playlist_guid = playlist_guids[0]
-        play_list_url = "http://api.mtvnn.com/v2/nl/NL/local_playlists/{}.json?video_format=m3u8".format(playlist_guid)
-
-        data = UriHandler.open(play_list_url, proxy=self.proxy)
-
-        from resources.lib.helpers.jsonhelper import JsonHelper
         from resources.lib.streams.m3u8 import M3u8
 
-        json_data = JsonHelper(data)
-        m3u8_url = json_data.get_value("local_playlist_videos", 0, "url")
-        part = item.create_new_empty_media_part()
-        item.complete = M3u8.update_part_with_m3u8_streams(part, m3u8_url, proxy=self.proxy, channel=self, encrypted=True)
+        data = UriHandler.open(item.url, proxy=self.proxy)
+        video_id = Regexer.do_regex(r'{"video":{"config":{"uri":"([^"]+)', data)[0]
+        url = "http://media.mtvnservices.com/pmt/e1/access/index.html?uri={}&configtype=edge".format(video_id)
+        meta_data = UriHandler.open(url, proxy=self.proxy, referer=self.baseUrl)
+        meta = JsonHelper(meta_data)
+        stream_parts = meta.get_value("feed", "items")
+        for stream_part in stream_parts:
+            stream_url = stream_part["group"]["content"]
+            stream_url = stream_url.replace("&device={device}", "")
+            stream_url = "%s&format=json&acceptMethods=hls" % (stream_url,)
+            stream_data = UriHandler.open(stream_url, proxy=self.proxy)
+            stream = JsonHelper(stream_data)
+
+            # subUrls = stream.get_value("package", "video", "item", 0, "transcript", 0, "typographic")  # NOSONAR
+            part = item.create_new_empty_media_part()
+
+            hls_streams = stream.get_value("package", "video", "item", 0, "rendition")
+            for hls_stream in hls_streams:
+                hls_url = hls_stream["src"]
+                item.complete |= M3u8.update_part_with_m3u8_streams(part, hls_url, proxy=self.proxy)
+
+        item.complete = True
+        Logger.trace("Media url: %s", item)
         return item
